--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -18,6 +18,10 @@ before_build:
   - dotnet tool install --global dotnet-sonarscanner
   - choco install -y opencover.portable
   - ps: >-
+      (Get-Content Gw2Sharp/Gw2Sharp.csproj) `
+        -replace '<Version>([^<]*)</Version>', '<Version>$1-appveyor-$env:APPVEYOR_BUILD_VERSION</Version>' |
+      Out-File Gw2Sharp/Gw2Sharp.csproj
+  - ps: >-
       if (!(Test-Path env:APPVEYOR_PULL_REQUEST_NUMBER)) {
         if ($env:APPVEYOR_REPO_TAG -eq "true") {
           dotnet sonarscanner begin /k:"Archomeda_Gw2Sharp" /o:"archomeda-github" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="$env:SONAR_TOKEN" /d:sonar.cs.opencover.reportsPaths="coverage.xml" /d:sonar.branch.name="$env:APPVEYOR_REPO_BRANCH" /v:"$env:APPVEYOR_REPO_TAG_NAME"
@@ -28,6 +32,7 @@ before_build:
 
 build:
   project: Gw2Sharp.sln
+  publish_nuget_symbols: true
 
 test_script:
   - OpenCover.Console.exe -register:user -target:"C:\Program Files\dotnet\dotnet.exe" -targetargs:"test Gw2Sharp.Tests/Gw2Sharp.Tests.csproj --configuration %CONFIGURATION% --no-build" -output:"coverage.xml" -oldStyle
