--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -19,7 +19,7 @@ before_build:
   - choco install -y opencover.portable
   - ps: >-
       (Get-Content Gw2Sharp/Gw2Sharp.csproj) `
-        -replace '<Version>([^<]*)</Version>', '<Version>$1-appveyor-$env:APPVEYOR_BUILD_VERSION</Version>' |
+        -replace '<Version>([^<]*)</Version>', "<Version>`$1-appveyor-$env:APPVEYOR_BUILD_VERSION</Version>" |
       Out-File Gw2Sharp/Gw2Sharp.csproj
   - ps: >-
       if (!(Test-Path env:APPVEYOR_PULL_REQUEST_NUMBER)) {
