--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -32,7 +32,6 @@ before_build:
 
 build:
   project: Gw2Sharp.sln
-  publish_nuget_symbols: true
 
 test_script:
   - OpenCover.Console.exe -register:user -target:"C:\Program Files\dotnet\dotnet.exe" -targetargs:"test Gw2Sharp.Tests/Gw2Sharp.Tests.csproj --configuration %CONFIGURATION% --no-build" -output:"coverage.xml" -oldStyle
@@ -42,3 +41,7 @@ after_test:
       if (!(Test-Path env:APPVEYOR_PULL_REQUEST_NUMBER)) {
         dotnet sonarscanner end /d:sonar.login="$env:SONAR_TOKEN"
       }
+  - dotnet pack Gw2Sharp -c %CONFIGURATION% --no-build --include-symbols -o pack
+
+artifacts:
+  - path: pack/*.nupkg
