--- a/Gw2Sharp.Tests/Gw2Sharp.Tests.csproj
+++ b/Gw2Sharp.Tests/Gw2Sharp.Tests.csproj
@@ -191,6 +191,9 @@
     <None Remove="TestFiles\Mounts\MountsTypes.bulk.json" />
     <None Remove="TestFiles\Mounts\MountsTypes.ids.json" />
     <None Remove="TestFiles\Mounts\MountsTypes.single.json" />
+    <None Remove="TestFiles\Novelties\Novelties.bulk.json" />
+    <None Remove="TestFiles\Novelties\Novelties.ids.json" />
+    <None Remove="TestFiles\Novelties\Novelties.single.json" />
     <None Remove="TestFiles\TokenInfo\TokenInfo.ApiToken.json" />
     <None Remove="TestFiles\TokenInfo\TokenInfo.SubToken.json" />
     <None Remove="TestFiles\WorldBosses\WorldBosses.bulk.json" />
@@ -377,6 +380,9 @@
     <EmbeddedResource Include="TestFiles\Mounts\MountsTypes.bulk.json" />
     <EmbeddedResource Include="TestFiles\Mounts\MountsTypes.ids.json" />
     <EmbeddedResource Include="TestFiles\Mounts\MountsTypes.single.json" />
+    <EmbeddedResource Include="TestFiles\Novelties\Novelties.bulk.json" />
+    <EmbeddedResource Include="TestFiles\Novelties\Novelties.ids.json" />
+    <EmbeddedResource Include="TestFiles\Novelties\Novelties.single.json" />
     <EmbeddedResource Include="TestFiles\TokenInfo\TokenInfo.ApiToken.json" />
     <EmbeddedResource Include="TestFiles\TokenInfo\TokenInfo.SubToken.json" />
     <EmbeddedResource Include="TestFiles\WorldBosses\WorldBosses.bulk.json" />
