Add Gw2WebApiRenderClient tests

--- a/Gw2Sharp.Tests/Gw2Sharp.Tests.csproj
+++ b/Gw2Sharp.Tests/Gw2Sharp.Tests.csproj
@@ -194,6 +194,7 @@
     <None Remove="TestFiles\Novelties\Novelties.bulk.json" />
     <None Remove="TestFiles\Novelties\Novelties.ids.json" />
     <None Remove="TestFiles\Novelties\Novelties.single.json" />
+    <None Remove="TestFiles\Render\414998.png" />
     <None Remove="TestFiles\TokenInfo\TokenInfo.ApiToken.json" />
     <None Remove="TestFiles\TokenInfo\TokenInfo.SubToken.json" />
     <None Remove="TestFiles\WorldBosses\WorldBosses.bulk.json" />
@@ -383,6 +384,7 @@
     <EmbeddedResource Include="TestFiles\Novelties\Novelties.bulk.json" />
     <EmbeddedResource Include="TestFiles\Novelties\Novelties.ids.json" />
     <EmbeddedResource Include="TestFiles\Novelties\Novelties.single.json" />
+    <EmbeddedResource Include="TestFiles\Render\414998.png" />
     <EmbeddedResource Include="TestFiles\TokenInfo\TokenInfo.ApiToken.json" />
     <EmbeddedResource Include="TestFiles\TokenInfo\TokenInfo.SubToken.json" />
     <EmbeddedResource Include="TestFiles\WorldBosses\WorldBosses.bulk.json" />
