--- a/Gw2Sharp.DocFX/guides/toc.yml
+++ b/Gw2Sharp.DocFX/guides/toc.yml
@@ -2,8 +2,8 @@
   items:
     - name: Introduction
       topicUid: Guides.Introduction
-    - name: Endpoints
-      topicUid: Guides.Endpoints
+    - name: Services
+      topicUid: Guides.Services
     - name: Parameterized endpoints
       topicUid: Guides.ParameterizedEndpoints
     - name: Subtokens
