--- a/Gw2Sharp.Tests/Gw2Sharp.Tests.csproj
+++ b/Gw2Sharp.Tests/Gw2Sharp.Tests.csproj
@@ -197,6 +197,9 @@
     <None Remove="TestFiles\Outfits\Outfits.bulk.json" />
     <None Remove="TestFiles\Outfits\Outfits.ids.json" />
     <None Remove="TestFiles\Outfits\Outfits.single.json" />
+    <None Remove="TestFiles\Pets\Pets.bulk.json" />
+    <None Remove="TestFiles\Pets\Pets.ids.json" />
+    <None Remove="TestFiles\Pets\Pets.single.json" />
     <None Remove="TestFiles\Render\414998.png" />
     <None Remove="TestFiles\TokenInfo\TokenInfo.ApiToken.json" />
     <None Remove="TestFiles\TokenInfo\TokenInfo.SubToken.json" />
@@ -387,6 +390,9 @@
     <EmbeddedResource Include="TestFiles\Novelties\Novelties.bulk.json" />
     <EmbeddedResource Include="TestFiles\Novelties\Novelties.ids.json" />
     <EmbeddedResource Include="TestFiles\Novelties\Novelties.single.json" />
+    <EmbeddedResource Include="TestFiles\Pets\Pets.bulk.json" />
+    <EmbeddedResource Include="TestFiles\Pets\Pets.ids.json" />
+    <EmbeddedResource Include="TestFiles\Pets\Pets.single.json" />
     <EmbeddedResource Include="TestFiles\Outfits\Outfits.bulk.json" />
     <EmbeddedResource Include="TestFiles\Outfits\Outfits.ids.json" />
     <EmbeddedResource Include="TestFiles\Outfits\Outfits.single.json" />
