--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: mcr.microsoft.com/dotnet/core/sdk:3.0.100-preview6
+image: mcr.microsoft.com/dotnet/core/sdk:3.0
 
 variables:
   CONFIGURATION: Release
