--- a/Gw2Sharp.Tests/Gw2Sharp.Tests.csproj
+++ b/Gw2Sharp.Tests/Gw2Sharp.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFrameworks>netcoreapp3.0</TargetFrameworks>
@@ -201,6 +201,9 @@
     <None Remove="TestFiles\Pets\Pets.bulk.json" />
     <None Remove="TestFiles\Pets\Pets.ids.json" />
     <None Remove="TestFiles\Pets\Pets.single.json" />
+    <None Remove="TestFiles\Professions\Professions.bulk.json" />
+    <None Remove="TestFiles\Professions\Professions.ids.json" />
+    <None Remove="TestFiles\Professions\Professions.single.json" />
     <None Remove="TestFiles\Render\414998.png" />
     <None Remove="TestFiles\TokenInfo\TokenInfo.ApiToken.json" />
     <None Remove="TestFiles\TokenInfo\TokenInfo.SubToken.json" />
@@ -397,6 +400,9 @@
     <EmbeddedResource Include="TestFiles\Outfits\Outfits.bulk.json" />
     <EmbeddedResource Include="TestFiles\Outfits\Outfits.ids.json" />
     <EmbeddedResource Include="TestFiles\Outfits\Outfits.single.json" />
+    <EmbeddedResource Include="TestFiles\Professions\Professions.bulk.json" />
+    <EmbeddedResource Include="TestFiles\Professions\Professions.ids.json" />
+    <EmbeddedResource Include="TestFiles\Professions\Professions.single.json" />
     <EmbeddedResource Include="TestFiles\Render\414998.png" />
     <EmbeddedResource Include="TestFiles\TokenInfo\TokenInfo.ApiToken.json" />
     <EmbeddedResource Include="TestFiles\TokenInfo\TokenInfo.SubToken.json" />
