Add Mumble Link test

--- a/Gw2Sharp.Tests/Gw2Sharp.Tests.csproj
+++ b/Gw2Sharp.Tests/Gw2Sharp.Tests.csproj
@@ -192,6 +192,7 @@
     <None Remove="TestFiles\Mounts\MountsTypes.bulk.json" />
     <None Remove="TestFiles\Mounts\MountsTypes.ids.json" />
     <None Remove="TestFiles\Mounts\MountsTypes.single.json" />
+    <None Remove="TestFiles\Mumble\MemoryMappedFile.bin" />
     <None Remove="TestFiles\Novelties\Novelties.bulk.json" />
     <None Remove="TestFiles\Novelties\Novelties.ids.json" />
     <None Remove="TestFiles\Novelties\Novelties.single.json" />
@@ -391,6 +392,7 @@
     <EmbeddedResource Include="TestFiles\Mounts\MountsTypes.bulk.json" />
     <EmbeddedResource Include="TestFiles\Mounts\MountsTypes.ids.json" />
     <EmbeddedResource Include="TestFiles\Mounts\MountsTypes.single.json" />
+    <EmbeddedResource Include="TestFiles\Mumble\MemoryMappedFile.bin" />
     <EmbeddedResource Include="TestFiles\Novelties\Novelties.bulk.json" />
     <EmbeddedResource Include="TestFiles\Novelties\Novelties.ids.json" />
     <EmbeddedResource Include="TestFiles\Novelties\Novelties.single.json" />
