--- a/Gw2Sharp.Tests/Gw2Sharp.Tests.csproj
+++ b/Gw2Sharp.Tests/Gw2Sharp.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFrameworks>netcoreapp3.0</TargetFrameworks>
@@ -204,6 +204,9 @@
     <None Remove="TestFiles\Professions\Professions.bulk.json" />
     <None Remove="TestFiles\Professions\Professions.ids.json" />
     <None Remove="TestFiles\Professions\Professions.single.json" />
+    <None Remove="TestFiles\Pvp\PvpAmulets.bulk.json" />
+    <None Remove="TestFiles\Pvp\PvpAmulets.ids.json" />
+    <None Remove="TestFiles\Pvp\PvpAmulets.single.json" />
     <None Remove="TestFiles\Render\414998.png" />
     <None Remove="TestFiles\TokenInfo\TokenInfo.ApiToken.json" />
     <None Remove="TestFiles\TokenInfo\TokenInfo.SubToken.json" />
@@ -400,6 +403,9 @@
     <EmbeddedResource Include="TestFiles\Outfits\Outfits.bulk.json" />
     <EmbeddedResource Include="TestFiles\Outfits\Outfits.ids.json" />
     <EmbeddedResource Include="TestFiles\Outfits\Outfits.single.json" />
+    <EmbeddedResource Include="TestFiles\Pvp\PvpAmulets.bulk.json" />
+    <EmbeddedResource Include="TestFiles\Pvp\PvpAmulets.ids.json" />
+    <EmbeddedResource Include="TestFiles\Pvp\PvpAmulets.single.json" />
     <EmbeddedResource Include="TestFiles\Professions\Professions.bulk.json" />
     <EmbeddedResource Include="TestFiles\Professions\Professions.ids.json" />
     <EmbeddedResource Include="TestFiles\Professions\Professions.single.json" />
