--- a/Gw2Sharp.Tests/Gw2Sharp.Tests.csproj
+++ b/Gw2Sharp.Tests/Gw2Sharp.Tests.csproj
@@ -210,6 +210,9 @@
     <None Remove="TestFiles\Pvp\PvpGames.bulk.json" />
     <None Remove="TestFiles\Pvp\PvpGames.ids.json" />
     <None Remove="TestFiles\Pvp\PvpGames.single.json" />
+    <None Remove="TestFiles\Pvp\PvpRanks.bulk.json" />
+    <None Remove="TestFiles\Pvp\PvpRanks.ids.json" />
+    <None Remove="TestFiles\Pvp\PvpRanks.single.json" />
     <None Remove="TestFiles\Render\414998.png" />
     <None Remove="TestFiles\TokenInfo\TokenInfo.ApiToken.json" />
     <None Remove="TestFiles\TokenInfo\TokenInfo.SubToken.json" />
@@ -406,6 +409,9 @@
     <EmbeddedResource Include="TestFiles\Outfits\Outfits.bulk.json" />
     <EmbeddedResource Include="TestFiles\Outfits\Outfits.ids.json" />
     <EmbeddedResource Include="TestFiles\Outfits\Outfits.single.json" />
+    <EmbeddedResource Include="TestFiles\Pvp\PvpRanks.single.json" />
+    <EmbeddedResource Include="TestFiles\Pvp\PvpRanks.ids.json" />
+    <EmbeddedResource Include="TestFiles\Pvp\PvpRanks.bulk.json" />
     <EmbeddedResource Include="TestFiles\Pvp\PvpGames.bulk.json" />
     <EmbeddedResource Include="TestFiles\Pvp\PvpGames.ids.json" />
     <EmbeddedResource Include="TestFiles\Pvp\PvpGames.single.json" />
