--- a/Gw2Sharp.Tests/Gw2Sharp.Tests.csproj
+++ b/Gw2Sharp.Tests/Gw2Sharp.Tests.csproj
@@ -213,6 +213,9 @@
     <None Remove="TestFiles\Pvp\PvpRanks.bulk.json" />
     <None Remove="TestFiles\Pvp\PvpRanks.ids.json" />
     <None Remove="TestFiles\Pvp\PvpRanks.single.json" />
+    <None Remove="TestFiles\Pvp\PvpSeasons.bulk.json" />
+    <None Remove="TestFiles\Pvp\PvpSeasons.ids.json" />
+    <None Remove="TestFiles\Pvp\PvpSeasons.single.json" />
     <None Remove="TestFiles\Render\414998.png" />
     <None Remove="TestFiles\TokenInfo\TokenInfo.ApiToken.json" />
     <None Remove="TestFiles\TokenInfo\TokenInfo.SubToken.json" />
@@ -409,6 +412,9 @@
     <EmbeddedResource Include="TestFiles\Outfits\Outfits.bulk.json" />
     <EmbeddedResource Include="TestFiles\Outfits\Outfits.ids.json" />
     <EmbeddedResource Include="TestFiles\Outfits\Outfits.single.json" />
+    <EmbeddedResource Include="TestFiles\Pvp\PvpSeasons.ids.json" />
+    <EmbeddedResource Include="TestFiles\Pvp\PvpSeasons.single.json" />
+    <EmbeddedResource Include="TestFiles\Pvp\PvpSeasons.bulk.json" />
     <EmbeddedResource Include="TestFiles\Pvp\PvpRanks.single.json" />
     <EmbeddedResource Include="TestFiles\Pvp\PvpRanks.ids.json" />
     <EmbeddedResource Include="TestFiles\Pvp\PvpRanks.bulk.json" />
